Add Some Changes

--- a/Fingerprint/Html/index.html
+++ b/Fingerprint/Html/index.html
@@ -16,8 +16,8 @@
       crossorigin="anonymous"
     />
 
-    <script src="/Javascript/MFScan.js"></script>
-    <script src="/Javascript/MXFace.js"></script>
+    <script src="/Fingerprint/Javascript/MFScan.js"></script>
+    <script src="/Fingerprint/Javascript/MXFace.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js"></script>
     <script language="javascript" type="text/javascript">
       var timeout = 50; // seconds (minimum=10(recommanded), maximum=60, unlimited=0 )
@@ -310,7 +310,7 @@
                 <img
                   id="imgFingerprint"
                   class="img-thumbnail"
-                  src="/Images/FingerDemo.png"
+                  src="/Fingerprint/Images/FingerDemo.png"
                   width="220"
                   height="220"
                   alt="Capture 1"
@@ -578,7 +578,7 @@
                 <img
                   id="matchFingerprint1"
                   class="img-thumbnail"
-                  src="/Images/FingerDemo.png"
+                  src="/Fingerprint/Images/FingerDemo.png"
                   width="220"
                   height="220"
                   alt="Capture 1"
@@ -592,7 +592,7 @@
                 <img
                   id="matchFingerprint2"
                   class="img-thumbnail"
-                  src="/Images/FingerDemo.png"
+                  src="/Fingerprint/Images/FingerDemo.png"
                   width="220"
                   height="220"
                   alt="Capture 1"
