--- a/Iris/index.html
+++ b/Iris/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <script src="MIScan.js"></script>
-    <script src="MXScan.js"></script>
+    <script src="MXFaceScan.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js"></script>
     <script language="javascript" type="text/javascript">
 
